[gd_scene load_steps=17 format=3 uid="uid://byypg6wqsdppo"]

[ext_resource type="Texture2D" uid="uid://b0wmbfr68jjcj" path="res://sprites/Players/Copy Robot/Weapons/BusterSmall.png" id="1_6vcoq"]
[ext_resource type="Script" path="res://scenes/Objects/Players/Weapons/Copy Robot/buster_medium.gd" id="1_8dcat"]
[ext_resource type="Texture2D" uid="uid://bwnmnn0441jru" path="res://sprites/Players/Copy Robot/Weapons/BusterMedium.png" id="1_dl824"]
[ext_resource type="Shader" path="res://shaders/PaletteSwap.gdshader" id="1_xpas8"]
[ext_resource type="AudioStream" uid="uid://dcvhxvuushcu4" path="res://sounds/chargeshot.wav" id="4_4cbi1"]
[ext_resource type="AudioStream" uid="uid://cs2dmn3ahpbea" path="res://sounds/pop.wav" id="5_pu124"]
[ext_resource type="AudioStream" uid="uid://mfk4w30lewvq" path="res://sounds/tink.wav" id="6_7byil"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ditjs"]
shader = ExtResource("1_xpas8")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uf7xu"]
shader = ExtResource("1_xpas8")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_4wmqh"]
atlas = ExtResource("1_dl824")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw3cf"]
atlas = ExtResource("1_dl824")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e08mh"]
atlas = ExtResource("1_6vcoq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp8dl"]
atlas = ExtResource("1_6vcoq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhj74"]
atlas = ExtResource("1_6vcoq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tmmfq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wmqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw3cf")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e08mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp8dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhj74")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0fvlc"]
size = Vector2(16, 16)

[node name="BusterMedium" type="CharacterBody2D"]
material = SubResource("ShaderMaterial_ditjs")
collision_layer = 8
collision_mask = 0
script = ExtResource("1_8dcat")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_uf7xu")
sprite_frames = SubResource("SpriteFrames_tmmfq")
autoplay = "default"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1.19209e-07, 4.17233e-07)
scale = Vector2(0.8, 0.8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0fvlc")

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4cbi1")
bus = &"SFX"

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pu124")
bus = &"SFX"

[node name="ReflectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7byil")
bus = &"SFX"

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
